# SandWitch-Engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
editor/: CMakeLists.txt
editor/include/Editor/: CameraEditor.hpp  Editor.hpp  EditorApp.hpp
editor/include/Widgets/: ExplorerWidget.hpp  LogWidget.hpp  MenuWidget.hpp  PropertiesWidget.hpp  SceneWidget.hpp  ToolboxWidget.hpp  ViewerWidget.hpp  ViewportWidget.hpp  Widget.hpp
editor/src/: main.cpp
editor/src/Editor/: CameraEditor.cpp  Editor.cpp  EditorApp.cpp
editor/src/Widgets/: ExplorerWidget.cpp  LogWidget.cpp  MenuWidget.cpp  PropertiesWidget.cpp  SceneWidget.cpp  ToolboxWidget.cpp  ViewerWidget.cpp  ViewportWidget.cpp  Widget.cpp
engine/: CMakeLists.txt
engine/include/: Engine.hpp
engine/include/Assets/: AssetManager.hpp  GltfLoader.hpp  TextureLoader.hpp
engine/include/Core/: Application.hpp
engine/include/Debug/: Assertion.hpp  Log.hpp
engine/include/Input/include/: InputManager.hpp  PlatformInput.hpp  PlatformInputGLFW.hpp
engine/include/Physics/: PhysicsWorld.hpp
engine/include/Renderer/: Camera.hpp  Material.hpp  Mesh.hpp  RenderContext.hpp  RenderPipeline.hpp
engine/include/Scene/: Entity.hpp  Scene.hpp
engine/include/Scene/Components/: CameraComponent.hpp  LightComponent.hpp  MeshComponent.hpp  Transform.hpp
engine/include/Timer/: Timer.hpp
engine/include/Window/: Window.hpp
engine/src/Assets/: AssetManager.cpp  GltfLoader.cpp  TextureLoader.cpp
engine/src/Core/: Application.cpp
engine/src/Physics/: PhysicsWorld.cpp
engine/src/Renderer/: Camera.cpp  Mesh.cpp  RenderContext.cpp
engine/src/Scene/: Entity.cpp  Scene.cpp
engine/src/Scene/Components/: Transform.cpp
engine/src/Timer/: Timer.cpp
engine/src/Window/: Window.cpp
game/: CMakeLists.txt
game/src/: GameApp.cpp  GameApp.hpp  main.cpp
